<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.SignupFragment">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/signup"
            android:textColor="@color/orang"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txemail1"
            android:layout_width="371dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="@+id/txname"
            app:layout_constraintStart_toStartOf="@+id/txname"
            app:layout_constraintTop_toBottomOf="@+id/txname"
            tools:ignore="Autofill,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txdate"
            android:layout_width="371dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/dateofbirth"
            android:inputType="textPersonName"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="@+id/txemail1"
            app:layout_constraintStart_toStartOf="@+id/txemail1"
            app:layout_constraintTop_toBottomOf="@+id/txemail1"
            tools:ignore="Autofill,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txname"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="Autofill,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txPassword"
            android:layout_width="371dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="@+id/txdate"
            app:layout_constraintStart_toStartOf="@+id/txdate"
            app:layout_constraintTop_toBottomOf="@+id/txdate"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/button"
            android:text="@string/signup"
            android:fontFamily="@font/aclonica"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txPassword"
            app:layout_constraintStart_toStartOf="@+id/txPassword"
            app:layout_constraintTop_toBottomOf="@+id/txPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignin"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button"
            android:fontFamily="@font/aclonica"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/txPassword"
            app:layout_constraintStart_toStartOf="@+id/txPassword"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>