<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBE6"

    tools:context=".activity.ProfileActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/iv_choose_new"
        app:layout_constraintEnd_toEndOf="@+id/iv_choose_new"
        app:layout_constraintStart_toStartOf="@+id/iv_choose_new"
        app:layout_constraintTop_toTopOf="@+id/iv_choose_new"
        app:srcCompat="@drawable/profile"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_choose_new"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/txname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/profile"
        android:textColor="#FF7000"
     android:fontFamily="@font/adamina"
         android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txemail1"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txname"
        app:layout_constraintStart_toStartOf="@+id/txname"
        app:layout_constraintTop_toBottomOf="@+id/txname"
        tools:ignore="Autofill,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txdate"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/dateofbirth"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txemail1"
        app:layout_constraintStart_toStartOf="@+id/txemail1"
        app:layout_constraintTop_toBottomOf="@+id/txemail1"
        tools:ignore="Autofill,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="Autofill,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txPassword"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txdate"
        app:layout_constraintStart_toStartOf="@+id/txdate"
        app:layout_constraintTop_toBottomOf="@+id/txdate"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEditProfile"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:text="@string/EditProfile"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:fontFamily="@font/akaya_telivigala"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txPassword"
        app:layout_constraintStart_toStartOf="@+id/txPassword"
        app:layout_constraintTop_toBottomOf="@+id/txPassword" />

    <include
        android:id="@+id/included_bottom"
        layout="@layout/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>