<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.LoginFragment">



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/sign_in"
            android:fontFamily="@font/akaya_telivigala"
            android:textColor="@color/orang"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txUsername"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:ems="10"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingHorizontal="16dp"
             app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnlogin"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:fontFamily="@font/akaya_telivigala"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txPassword1"
            app:layout_constraintStart_toStartOf="@+id/txPassword1"
            app:layout_constraintTop_toBottomOf="@+id/cb_remember_me" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginTop="8dp"
            android:text="@string/signup"
            android:fontFamily="@font/akaya_telivigala"

            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/txPassword1"
            app:layout_constraintStart_toStartOf="@+id/txPassword1"
            app:layout_constraintTop_toBottomOf="@+id/btnlogin" />


        <EditText
            android:id="@+id/txPassword1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
             app:layout_constraintEnd_toEndOf="@+id/txUsername"
            app:layout_constraintStart_toStartOf="@+id/txUsername"
            app:layout_constraintTop_toBottomOf="@+id/txUsername"
            tools:ignore="Autofill" />

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/remember_me"
            android:fontFamily="@font/lemon"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/txPassword1"
            app:layout_constraintTop_toBottomOf="@+id/txPassword1" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="260dp"
            android:layout_height="240dp"
            android:layout_marginBottom="36dp"
            android:src="@drawable/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!--
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                     android:src="@drawable/login"
                    tools:layout_editor_absoluteX="96dp"
                    tools:layout_editor_absoluteY="-19dp" />

        </Linear

-->