<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:weightSum="3"
    tools:ignore="DisableBaselineAlignment">

    <LinearLayout
        android:id="@+id/homeContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/bottom_btn_home"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="6dp"
            android:visibility="visible"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_home_orange"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="#676767"
            android:textSize="12sp"
            android:fontFamily="@font/aclonica"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/bottom_btn_profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="6dp"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_profile_gray"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/profile"
            android:fontFamily="@font/aclonica"

            android:textAlignment="center"
            android:textColor="#676767"
            android:textSize="12sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_btn_settings"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="6dp"
            android:visibility="visible"
            app:srcCompat="@drawable/bottom_btn4"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/aclonica"
            android:layout_marginBottom="8dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="#676767"
            android:textSize="12sp"
            android:visibility="visible" />

    </LinearLayout>
</LinearLayout>